# Nice_Fridge2

./: CMakeLists.txt  README.md
src/: main.cpp
src/data/: Inventory.cpp  Inventory.h  Product.cpp  Product.h
src/file_io/: FileManager.cpp  FileManager.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h
test_data/: NICE2.json  Nice(corrupted).json
tests/: inventory_tests.cpp
